# PulseqSystems

./: .gitignore  LICENSE  README.md  pulseqsystems.nimble  pyproject.toml  test.nim  test.py
src/: pulseq_systems.nim  pulseqsystems.nim
src/pulseq_systems/: __init__.py  get_systems.py
src/pulseq_systems/json/: MRSystems.json
