[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseq-systems"
version = "0.1.0"
description = "MR system specifications for PyPulseq"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "importlib-resources>=5.0; python_version<'3.9'"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pulseq_systems = ["json/*.json"]

